system/gatekeeper/tests/fixtures/forbidden-clusterwide-objects/gatekeeper-tugger.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    meta.helm.sh/release-name: gatekeeper
    meta.helm.sh/release-namespace: kube-system
  labels:
    app: tugger
    app.kubernetes.io/managed-by: Helm
    chart: tugger-0.4.3
    heritage: Helm
    release: gatekeeper
    support-group: foo-group
    service: dummy
  name: gatekeeper-tugger
webhooks:
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    service:
      name: gatekeeper-tugger
      namespace: kube-system
      path: /mutate
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: tugger-mutate.jainishshah17.com
  namespaceSelector: {}
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
